samples/_failures_safe/1761317822_967c7d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_981aa016.c: In function ‘main’:
./samples/SAFE/__tmp_981aa016.c:181:5: error: expected expression at end of input
  181 |     if (len > 0 && input[len -
      |     ^~
./samples/SAFE/__tmp_981aa016.c:181:5: error: expected declaration or statement at end of input
